gitweb/daemon now work for wild repos also
(thanks to Kevin Fleming for the need/use case)

TODO: tests
TODO: proper documentation; meanwhile, just read this:

  - you can give gitweb and daemon read rights to wild card repos also,
    and it'll all just work -- when a new repo is 'C'reated, it'll pick
    up those rights etc

  - you can assign descriptions (and owners) to individual repos as
    before, except now you can assign them to repos that actually were
    created from wild card patterns.  So for example, you can define
    rules for

        repo foo/..*

    and then assign descriptions like

        foo/repo1 = "repo one"
        foo/repo2 = "repo two"
        foo/dil "scott" = "scott's dilbert repo"

    However, this only works for repos that already exist, and only when
    you push the admin repo.

    Thumb rule: have the user create his wild repo, *then* add and push
    the admin config file with the description.  Not the other way
    around.

implementation notes:

  - wildcard support for git config revamped, refactored...

    it's not just git config that needs wildcard support.  daemon and
    gitweb access also will be needing it soon, so we start by factoring
    out the part that finds the "pattern" given a "real" repo name.

  - GL_NO_DAEMON_NO_GITWEB now gates more than just those two things;
    see doc/big-config.mkd for details

  - we trawl through $GL_REPO_BASE_ABS *once* only, collecting repo
    names and tying them to either the same name or to a wild pattern
    that the repo name was created from

  - nice little subs to setup gitweb, daemon, and git config

  - god bless $GL_REPOPATT and the day I decided to set that env var
    whenever a user hits a wild repo in any way :-)

  - the code in gl-compile-conf is very simple now.  Much nicer than
    before

--- a/doc/big-config.mkd
+++ b/doc/big-config.mkd
@@ -157,8 +157,16 @@ to 1 to enable it.
 The second is a very useful optimisation that you *must* enable if you *do*
 have a large number of repositories, and do *not* use gitolite's support for
 gitweb or git-daemon access (see "[easier to specify gitweb description and
-gitweb/daemon access][gw]" for details).  This will save a lot of time when
-you push the gitolite-admin repo with changes.
+gitweb/daemon access][gw]" for details) and do not specify "git config"
+settings via gitolite.  This will save a lot of time when you push the
+gitolite-admin repo with changes.
+
+In fact anything that requires trawling through the existing repos doing stuff
+to all of them is skipped if this variable is set.  This is primarily for the
+Fedora folks, but it should be useful for anyone who has a huge set of repos
+and wants to manage gitweb/daemon/etc access via other means (they typically
+have the whole thing controlled by a web-app and a database anyway, and
+gitolite is only doing the access control and nothing more).
 
 [gw]: http://github.com/sitaramc/gitolite/blob/pu/doc/3-faq-tips-etc.mkd#gitweb
 
